<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/main_layout_scene">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/limit"
        app:layout_constraintEnd_toEndOf="@+id/tvLimit"
        app:layout_constraintStart_toStartOf="@+id/tvLimit"
        app:layout_constraintTop_toBottomOf="@+id/tvLimit" />

    <ImageView
        android:id="@+id/ivQR"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/top_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_qr_code_scanner_24" />

    <LinearLayout
        android:id="@+id/top_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">


        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivQR">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivCryptocompare1"
                    style="@style/cryptocompare_image" />

                <ImageView
                    android:id="@+id/ivCryptocompare2"
                    style="@style/cryptocompare_image" />

                <ImageView
                    android:id="@+id/ivCryptocompare3"
                    style="@style/cryptocompare_image" />

                <ImageView
                    android:id="@+id/ivCryptocompare4"
                    style="@style/cryptocompare_image" />


            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/top_linear_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_usd"
                style="@style/currency_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textColor="@color/selected_text"
                app:backgroundTint="@color/selected_background"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_eur"
                style="@style/currency_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eur"
                app:backgroundTint="@color/white_button_background"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_rub"
                style="@style/currency_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rub"
                app:backgroundTint="@color/white_button_background"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_jpy"
                style="@style/currency_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpy"
                app:backgroundTint="@color/white_button_background"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_gbr"
                style="@style/currency_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gbp"
                app:backgroundTint="@color/white_button_background"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_idr"
                style="@style/currency_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/idr"
                app:backgroundTint="@color/white_button_background"
                app:cornerRadius="30dp" />


        </LinearLayout>


    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCoinPriceList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
        app:reverseLayout="false"
        tools:listitem="@layout/coin_item" />

    <io.ak1.BubbleTabBar
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFF"
        android:elevation="16dp"
        android:padding="7dp"
        app:bubbletab_disabled_icon_color="@color/black"
        app:bubbletab_horizontal_padding="20dp"
        app:bubbletab_icon_padding="5sp"
        app:bubbletab_icon_size="20dp"
        app:bubbletab_menuResource="@menu/bottom_menu"
        app:bubbletab_tab_corner_radius="25dp"
        app:bubbletab_title_size="16sp"
        app:bubbletab_vertical_padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Количество криптовалют:"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>